@@ -1,3 +1,7 @@
+2008-10-22  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Mono.Debugging.Client/ThreadInfo.cs: Added null check.
+
 2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* Mono.Debugging.mdp: Updated.
